--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <div class="contact-card">
       <h3>Instagram</h3>
       <p>
-        <a href="images/https://www.instagram.com/vaish_aari_mehendhi?igsh=YWw0ZHltODZ3ZG41"
+        <a href="https://www.instagram.com/vaish_aari_mehendhi?igsh=YWw0ZHltODZ3ZG41"
            target="_blank">
           📸 @vaish_aari_mehendhi
         </a>
@@ -74,3 +74,4 @@
 
 </body>
 </html>
+
